--- a/static/css/site.css
+++ b/static/css/site.css
@@ -13,16 +13,16 @@ body{
   font-family: 'Roboto', sans-serif; */
   font-family: 'Source Serif Pro', serif;
   font-family: 'Noto Sans TC', sans-serif;
-  font-size: 1.4em;
+ 
 }
-#main{
+#main-homepage{
   height:100%;width:100%;
   background-size: cover;
   position: absolute;
 }
 
 
-#main video{
+#main-homepage video{
   width:100%;
   height: 100%;
   position:absolute;
@@ -34,7 +34,7 @@ body{
   object-fit: cover;
 }
 
-#main::after {
+#main-homepage::after {
   width:100%;
   height:100%;
   content: '';
